Added javaOpts to gradle build.